fix. issue with 2D canvas size on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,6 @@ body {
 }
 
 canvas {
-  width: 100vw;
-  height: 100vh;
   margin: 0;
   padding: 0;
   cursor: grab;
